# Simula

./: .gitignore  LICENSE.md  README.md  docker-compose.yml
api-server/: Cargo.toml  Dockerfile  README.md
api-server/src/: main.rs
api-server/src/database/: mod.rs
api-server/src/handlers/: bot.rs  bussines.rs  callback.rs  channels.rs  chat.rs  files.rs  games.rs  gifts.rs  links.rs  messages.rs  mod.rs  passport.rs  payments.rs  stars.rs  topics.rs  users.rs  webapp.rs
api-server/src/handlers/api/: bot.rs  bussines.rs  callback.rs  channels.rs  chats.rs  files.rs  games.rs  gifts.rs  inline.rs  links.rs  messages.rs  mod.rs  passport.rs  payments.rs  stars.rs  stickers.rs  stories.rs  topics.rs  users.rs  webapp.rs
api-server/src/handlers/client/: bot.rs  business.rs  callbacks.rs  channels.rs  chats.rs  gifts.rs  groups.rs  inlines.rs  messages.rs  mod.rs  payments.rs  polls.rs  stories.rs  users.rs  webapp.rs  webhook.rs
api-server/src/handlers/client/types/: bot.rs  business.rs  channels.rs  chats.rs  gifts.rs  groups.rs  inlines.rs  messages.rs  mod.rs  payments.rs  users.rs
api-server/src/handlers/utils/: mod.rs  storage.rs  text.rs  updates.rs
api-server/src/routes/: mod.rs
api-server/src/types/: mod.rs
api-server/src/websocket/: mod.rs
client/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
docs/: DEBUG_CONSOLE.md  OPERATIONS.md  TAURI.md
scraper/: Dockerfile  README.md  (+1 more)
(+19 files in other folders)
