[package]
name = "simula-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.5"
actix-multipart = "0.6"
actix-web-actors = "4.3"
actix-cors = "0.7"
actix-files = "0.6"
futures-util = "0.3"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
uuid = { version = "1.7", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
