[package]
name = "simula-desktop"
version = "0.1.0"
description = "Simula desktop launcher"
authors = ["LaraXGram"]
license = "MIT"
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
